--- a/local/templates/main/components/bitrix/news.list/pedagogical_staff/style.css
+++ b/local/templates/main/components/bitrix/news.list/pedagogical_staff/style.css
@@ -36,6 +36,7 @@
     padding: 15px;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
+    cursor: pointer;
 }
 
 .teacher__img-wrapper {
