fixed bugs accommodation_rooms

--- a/local/templates/main/components/bitrix/news.list/accommodation_rooms/style.css
+++ b/local/templates/main/components/bitrix/news.list/accommodation_rooms/style.css
@@ -42,7 +42,6 @@
 
 .section-rooms {
     overflow: hidden;
-    margin: 5% 0 7%;
 }
 
 .rooms__title {
@@ -142,10 +141,10 @@
     height: 100%;
     position: absolute;
     top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    left: 0;
+    -webkit-transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
+    transform: translate(0, -50%);
     z-index: -1;
 }
 
@@ -198,16 +197,6 @@
     margin-bottom: 10px;
 }
 
-.room__icon {
-    display: block;
-    width: 29px;
-    height: 25px;
-    margin-right: 10px;
-    background-size: 30px;
-    background: url("img/room_icon.png") no-repeat;
-    background-size: 35px;
-}
-
 .room__text {
     width: 70%;
     line-height: 1.5;
@@ -242,42 +231,65 @@
     transition: 0.5s;
 }
 
-.seat {
-    background-position: 8% 0.9%;
-    background-size: 100px;
-}
-
-.parking {
-    background-position: 50% 8%;
-}
-
-.bed {
-    background-position: 51% 22%;
-    background-size: 30px;
-}
-
-.persons {
-    background-position: 50% 38%;
-    background-size: 40px;
-}
-
-.shower {
-    background-position: 50% 53%;
-}
-
-.square {
-    background-position: 50% 68%;
+.room__icon {
+    display: block;
+    width: 29px;
+    height: 25px;
+    margin-right: 10px;
+    background: url("./img/room_icons2.png") no-repeat;
+    background-size: 194.444%, 1741.93%;
 }
 
 .wc {
-    background-position: 50% 83%;
+    background-position: 50% 2.554%;
+}
+
+.square {
+    background-position: 50% 12.476%;
+}
+
+.shower {
+    background-position: 50% 21.98%;
+}
+
+.persons {
+    background-position: 48.571% 31.74%;
+}
+
+.bed {
+    background-position: 50% 38.889%;
+}
+
+.parking {
+    background-position: 48.718% 46.257%;
+}
+
+.no-smoking {
+    background-position: 48.889% 54.369%;
+}
+
+.family {
+    background-position: 50.98% 62.984%;
+}
+
+.menu-icon {
+    background-position: 50% 72.353%;
+}
+
+.Wi-Fi {
+    background-position: 48.837% 80.888%;
+}
+
+.seat {
+    background-position: 50% 89.341%;
 }
 
 .playground {
-    background-position: 50% 100%;
+    background-position: 50% 97.49%;
 }
 
 .hotelroom {
+    position: fixed;
     padding: 0;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -291,6 +303,11 @@
     justify-content: space-between;
     color: #fff;
     font-size: 12px;
+}
+
+.hotelroom__slaider {
+    padding: 0;
+    overflow: visible;
 }
 
 .hotelroom__wrapper {
@@ -464,9 +481,11 @@
         left: 0;
         opacity: 0;
     }
+
     70% {
         opacity: 1;
     }
+
     100% {
         left: 30px;
         opacity: 0;
@@ -477,17 +496,27 @@
     .room:hover::after {
         width: 50%;
     }
+
     .room__title {
         margin-bottom: 10px;
     }
+
     .room__title::after {
         margin-top: 10px;
     }
+
     .room__wrapper {
         width: 50%;
     }
+
     .room__item {
         margin-bottom: 5px;
+    }
+    .room__img {
+        left: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
     }
 }
 
@@ -496,58 +525,73 @@
         width: 49%;
         font-size: 12px;
     }
+
     .room__title {
         font-size: 12px;
     }
+
     .room__wrapper {
         padding: 10px 7px;
         width: 51%;
     }
+
     .room__item {
         font-size: 10px;
         line-height: 1.3;
     }
+
     .room__icon {
         margin-right: 5px;
     }
+
     .room__text {
         width: 75%;
     }
+
     .hotelroom__title {
         font-size: 16px;
     }
+
     .hotelroom__text {
         font-size: 11px;
         margin-bottom: 35px;
     }
+
     .rooms__arrows-container {
         width: 50px;
         height: 50px;
     }
+
     .rooms__arrow {
         left: 20%;
     }
+
     @-webkit-keyframes arrowMovement {
         0% {
             left: 0;
             opacity: 0;
         }
+
         70% {
             opacity: 1;
         }
+
         100% {
             left: 25px;
             opacity: 0;
         }
     }
+
     @keyframes arrowMovement {
         0% {
             left: 0;
             opacity: 0;
         }
+
         70% {
             opacity: 1;
         }
+
         100% {
             left: 25px;
             opacity: 0;
@@ -556,44 +600,43 @@
 }
 
 @media (max-width: 767.98px) {
-    .popup__modal {
-        left: 10%;
-        width: 80%;
-    }
     .container-next {
         right: 5%;
     }
+
     .container-prev {
         left: 5%;
     }
+
     .room__wrapper {
         min-height: 300px;
         max-height: 300px;
     }
+
     .room__list {
         max-height: 170px;
     }
+
     .hotelroom__gallery {
         width: 62%;
     }
+
     .hotelroom__wrapper {
         width: 37%;
     }
+
     .hotelroom__list {
         max-height: none;
     }
 }
 
 @media (max-width: 575.98px) {
-    .popup__close {
-        color: #000;
-        font-size: 40px;
-    }
     .rooms__title {
         font-family: HelveticaBold;
         font-weight: bold;
         font-size: 22px;
     }
+
     .rooms__buttons {
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
@@ -607,12 +650,14 @@
         align-items: flex-start;
         padding-left: 65px;
     }
+
     .rooms__button {
         width: 100%;
         text-align: left;
         font-size: 18px;
         padding: 25px 0;
     }
+
     .rooms__button::before {
         content: '';
         display: inline-block;
@@ -629,15 +674,19 @@
         transition: background 0.3s;
         cursor: pointer;
     }
+
     .rooms__button-active {
         background: transparent;
     }
+
     .rooms__button-active::before {
         background: #89c43e;
     }
+
     .room:hover::after {
         display: none;
     }
+
     .room__wrapper {
         width: 100%;
         background: transparent;
@@ -647,6 +696,7 @@
         max-height: 400px;
         padding: 25px;
     }
+
     .room__wrapper::after {
         content: '';
         display: block;
@@ -659,26 +709,32 @@
         opacity: .6;
         z-index: -1;
     }
+
     .room__title {
         font-size: 22px;
     }
+
     .room__list {
         max-height: 240px;
     }
+
     .room__item {
         font-size: 16px;
         margin-bottom: 10px;
     }
+
+
     .room__icon {
         width: 36px;
         height: 30px;
-        background-size: 40px;
     }
+
     .room__button {
         font-size: 22px;
         width: 185px;
         padding: 16px 0;
     }
+
     .hotelroom {
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
@@ -686,52 +742,67 @@
         flex-direction: column;
         height: 100%;
     }
+
     .hotelroom__title {
         margin-right: 0;
     }
+
     .hotelroom__title::after {
         display: none;
     }
+
     .hotelroom__gallery {
         width: 100%;
         padding: 0;
         margin-left: 0;
     }
+
     .hotelroom__prev {
         display: none;
     }
+
     .hotelroom__images {
         width: 100%;
         height: 300px;
         display: block;
     }
+
     .hotelroom__item {
-        width: 100;
-        height: 300px !important;
+        width: 100%;
+        height: 300px;
     }
+    .hotelroom__item:not(:last-child) {
+        margin-right: 0;
+    }
+
     .hotelroom__item:hover .room__img {
         -webkit-transform: translate(-50%, -50%) scale(1);
         -ms-transform: translate(-50%, -50%) scale(1);
         transform: translate(-50%, -50%) scale(1);
     }
-    .hotelroom__item:not(:last-child) {
-        margin-right: 0;
+    .hotelroom__images .slick-slide {
+        min-height: 300px;
     }
+
     .hotelroom__wrapper {
         width: 100%;
         overflow: auto;
     }
+
     .hotelroom__text {
         font-size: 14px;
     }
+
     .hotelroom__list {
         max-height: none;
     }
+
     .hotelroom__button {
         width: 100%;
         display: block;
         font-size: 18px;
     }
+
     .hotelroom__arrow {
         position: absolute;
         top: 40%;
@@ -756,11 +827,12 @@
         -webkit-transition: .3s;
         -o-transition: .3s;
         transition: .3s;
-        cursor: pointer;
     }
+
     .hotelroom__arrow-next {
         left: 5px;
     }
+
     .hotelroom__arrow-next:hover {
         -webkit-transition: .3s;
         -o-transition: .3s;
@@ -769,9 +841,11 @@
         -ms-transform: translate(-5px, 0);
         transform: translate(-5px, 0);
     }
+
     .hotelroom__arrow-prev {
         right: 5px;
     }
+
     .hotelroom__arrow-prev:hover {
         -webkit-transition: .3s;
         -o-transition: .3s;
@@ -780,32 +854,26 @@
         -ms-transform: translate(5px, 0);
         transform: translate(5px, 0);
     }
-    .seat {
-        background-size: 100px;
-    }
-}
-
-@media (max-width: 450px) {
-    .popup__modal {
-        left: 5%;
-        width: 90%;
-    }
 }
 
 @media (max-width: 400px) {
     .rooms__buttons {
         padding-left: 25px;
     }
+
     .room__title {
         font-size: 18px;
     }
+
     .room__item {
         font-size: 14px;
     }
+
     .room__button {
         font-size: 18px;
         padding: 10px 0;
     }
+
     .hotelroom__arrow {
         width: 40px;
         height: 40px;
