--- a/local/templates/main/components/bitrix/news.list/banquets/style.css
+++ b/local/templates/main/components/bitrix/news.list/banquets/style.css
@@ -1,12 +1,480 @@
-div.news-list
-{
-	word-wrap: break-word;
+/*section banquet */
+.banquet {
+    width: 100%;
 }
-div.news-list img.preview_picture
-{
-	float:left;
-	margin:0 4px 6px 0;
+
+.banquet__wrapper {
+    width: 100%;
+    padding: 30px 0;
+    color: #fff;
+    background: #8ac43f;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
 }
-.news-date-time {
-	color:#486DAA;
+
+.banquet__title {
+    font-family: HelveticaBold;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+.banquet__title::after {
+    content: '';
+    display: block;
+    width: 30%;
+    height: 3px;
+    background: #fff;
+}
+
+.banquet__text {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    width: 20%;
+}
+
+.banquet__icon {
+    width: 60px;
+    height: 60px;
+    margin-right: 20px;
+    background: url(../img/icon_banquet.png) no-repeat center;
+    background-size: cover;
+}
+
+.banquet__link {
+    text-decoration: none;
+    color: #fff;
+    font-size: 14px;
+    text-decoration: underline;
+}
+
+.banquet__description {
+    font-size: 14px;
+    line-height: 1.2;
+    margin: 30px auto;
+}
+
+@media (max-width: 991.98px) {
+    .banquet__text {
+        width: 30%;
+    }
+
+    .banquet__description {
+        margin-bottom: 10px;
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 575.98px) {
+    .banquet__wrapper {
+        padding-left: 40px;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        -webkit-box-pack: start;
+        -ms-flex-pack: start;
+        justify-content: flex-start;
+    }
+
+    .banquet__title {
+        margin-bottom: 30px;
+        font-size: 22px;
+    }
+
+    .banquet__title::after {
+        height: 5px;
+    }
+
+    .banquet__text {
+        width: 100%;
+    }
+
+    .banquet__icon {
+        width: 70px;
+        height: 70px;
+        margin-left: -1%;
+    }
+
+    .banquet__link {
+        font-size: 20px;
+    }
+
+    .banquet__description {
+        margin-bottom: 0;
+        font-size: 15px;
+    }
+}
+
+@media (max-width: 400px) {
+    .banquet__title {
+        font-size: 18px;
+        margin-bottom: 20px;
+    }
+
+    .banquet__title::after {
+        height: 3px;
+    }
+
+    .banquet__icon {
+        width: 50px;
+        height: 50px;
+    }
+
+    .banquet__link {
+        font-size: 16px;
+    }
+}
+
+
+
+
+/*section place */
+.section-place {
+    margin-top: 100px;
+}
+
+.place__title {
+    font-size: 16px;
+    font-family: HelveticaBold;
+    line-height: 1.5;
+    margin-left: 5%;
+}
+
+.place__title::after {
+    content: '';
+    display: block;
+    width: 20%;
+    height: 3px;
+    background: #00aced;
+}
+
+.place__wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-top: 50px;
+    position: relative;
+}
+
+.place__item {
+    width: calc(100% / 2 - 100px - 2%);
+    margin-bottom: 40px;
+}
+
+.place__item:nth-of-type(odd) {
+    margin-left: 50px;
+    margin-right: 2%;
+}
+
+.place__item:nth-of-type(even) {
+    -webkit-transform: translate(0, -80px);
+    -ms-transform: translate(0, -80px);
+    transform: translate(0, -80px);
+    margin-right: 50px;
+}
+
+.place__img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    min-width: 100%;
+    min-height: 100%;
+}
+
+.place__img-wrapper {
+    width: 100%;
+    min-height: 400px;
+    position: relative;
+    overflow: hidden;
+}
+
+.place__card {
+    color: #fff;
+    padding: 20px;
+    border-radius: 25px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    position: relative;
+}
+
+.place__card::before {
+    content: '';
+    display: block;
+    width: 25%;
+    height: 0;
+    padding-bottom: 20%;
+    background: url(../img/leaf.png) no-repeat center;
+    background-size: contain;
+}
+
+.place__card-blue {
+    background: rgba(0, 172, 236, 0.85);
+    top: -25%;
+    left: -50px;
+}
+
+.place__card-blue::before {
+    -webkit-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+}
+
+.place__card-pink {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: row-reverse;
+    flex-direction: row-reverse;
+    background: rgba(235, 79, 154, 0.85);
+    top: -50%;
+    right: -50px;
+}
+
+.place__card-pink .place__card-text {
+    margin-right: 50px;
+}
+
+.place__card-text {
+    font-size: 14px;
+    margin-left: 50px;
+}
+
+.place__text {
+    margin-top: -100px;
+    line-height: 1.5;
+    font-size: 14px;
+    width: 80%;
+    margin-left: 20%;
+}
+
+.place__text p {
+    margin-bottom: 10px;
+}
+
+@media (max-width: 1199.98px) {
+    .place__img-wrapper {
+        min-height: 350px;
+    }
+}
+
+@media (max-width: 991.98px) {
+    .place__item {
+        width: calc(100% / 2 - 60px - 2%);
+    }
+
+    .place__item:first-child {
+        margin-left: 30px;
+    }
+
+    .place__item:last-child {
+        margin-right: 30px;
+    }
+
+    .place__img-wrapper {
+        min-height: 300px;
+    }
+
+    .place__card-blue {
+        left: -30px;
+        top: -17%;
+    }
+
+    .place__card-pink {
+        right: -30px;
+        top: -40%;
+    }
+
+    .place__text {
+        margin-top: -70px;
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 767.98px) {
+    .place__item {
+        width: calc(100% / 2 - 30px - 2%);
+    }
+
+    .place__item:nth-of-type(odd) {
+        margin-left: 15px;
+    }
+
+    .place__item:nth-of-type(even) {
+        margin-right: 15px;
+    }
+
+    .place__img-wrapper {
+        min-height: 250px;
+    }
+
+    .place__card {
+        padding: 15px;
+    }
+
+    .place__card::before {
+        padding-bottom: 25%;
+    }
+
+    .place__card-blue {
+        left: -15px;
+        top: -17%;
+    }
+
+    .place__card-pink {
+        right: -15px;
+        top: -35%;
+    }
+
+    .place__card-pink .place__card-text {
+        margin-right: 30px;
+    }
+
+    .place__card-text {
+        margin-left: 30px;
+        font-size: 12px;
+    }
+
+    .place__text {
+        font-size: 11px;
+    }
+}
+
+@media (max-width: 575.98px) {
+    .section-place {
+        margin-top: 60px;
+    }
+
+    .place__wrapper {
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+    }
+
+    .place__title {
+        font-size: 25px;
+    }
+
+    .place__title::after {
+        height: 5px;
+    }
+
+    .place__item {
+        width: 90%;
+    }
+
+    .place__item:nth-of-type(odd) {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .place__item:nth-of-type(even) {
+        -webkit-transform: translate(0, 0);
+        -ms-transform: translate(0, 0);
+        transform: translate(0, 0);
+        margin-right: 0;
+    }
+
+    .place__img-wrapper {
+        min-height: 330px;
+    }
+
+    .place__card {
+        top: -20%;
+        width: 90%;
+    }
+
+    .place__card::before {
+        padding-bottom: 20%;
+    }
+
+    .place__card-blue {
+        left: 5%;
+    }
+
+    .place__card-text {
+        font-size: 16px;
+    }
+
+    .place__text {
+        width: 90%;
+        margin-left: 5%;
+        font-size: 18px;
+        margin-top: -60px;
+        margin-bottom: 30px;
+    }
+}
+
+@media (max-width: 575.98px) and (max-width: 400px) {
+    .place__wrapper {
+        margin-top: 30px;
+    }
+
+    .place__title {
+        font-size: 18px;
+    }
+
+    .place__title::after {
+        height: 3px;
+    }
+
+    .place__item {
+        width: 95%;
+    }
+
+    .place__img-wrapper {
+        min-height: 250px;
+    }
+
+    .place__card {
+        top: -15%;
+        width: 90%;
+    }
+
+    .place__card-text {
+        font-size: 14px;
+    }
+
+    .place__text {
+        width: 94%;
+        margin-left: 3%;
+        font-size: 14px;
+        margin-top: -50px;
+    }
 }
